--- a/app/src/main/res/layout/layout_alert_camera.xml
+++ b/app/src/main/res/layout/layout_alert_camera.xml
@@ -25,6 +25,21 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tv_tittle_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:textSize="20sp"
+                android:padding="10dp"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:background="@drawable/box_shadow"
+                android:visibility="gone"
+                android:text="@string/tittle"/>
+
             <ImageView
                 android:id="@+id/img_alert_foto"
                 android:layout_width="370dp"
