--- a/app/src/main/res/layout/fragment_dashboard_angka.xml
+++ b/app/src/main/res/layout/fragment_dashboard_angka.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <include layout="@layout/toolbar" />
-
+X
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
@@ -157,6 +157,8 @@
                 <include layout="@layout/layout_dashboard_angka_row_4" />
 
                 <include layout="@layout/layout_dashboard_angka_row_5" />
+
+                <include layout="@layout/layout_dashboard_tugas_part" />
 
                 <include layout="@layout/layout_dashboard_angka_row_6" />
 
