--- a/app/src/main/res/layout/item_layanan.xml
+++ b/app/src/main/res/layout/item_layanan.xml
@@ -52,6 +52,21 @@
         <TableRow android:layout_marginTop="5dp">
 
             <TextView
+                android:id="@+id/tv_keterangan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Keterangan Layanan"
+                android:layout_gravity="start"
+                android:textColor="@color/grey_900"
+                android:textSize="12sp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
+
+        </TableRow>
+
+
+        <TableRow android:layout_marginTop="5dp">
+
+            <TextView
                 android:id="@+id/tv_lokasi_layanan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
